--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -1,8 +1,10 @@
 import { Meta } from "@storybook/blocks";
+import { Header } from './components/header';
 
-<Meta title="Design System Serasa" />
+<Meta title="Intro - Design System Serasa" />
 
 <div className="sb-container">
+  <Header title="Teste"/>
   <h1>Bem vindo ao Design System da Serasa!</h1>
 </div>
 
