--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -4,7 +4,7 @@ import { Header } from './components/header';
 <Meta title="Intro - Design System Serasa" />
 
 <div className="sb-container">
-  <Header title="Teste"/>
+  <Header title=""/>
   <h1>Bem vindo ao Design System da Serasa!</h1>
 </div>
 
